--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "mini": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.7.0"
   }
 }
