fix: change module path to relative path for testing

--- a/.github/workflows/test_reviewdog_rails.yml
+++ b/.github/workflows/test_reviewdog_rails.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test-reviewdog-rails:
-    uses: pinnacles/common-cicd-actions/.github/workflows/reviewdog_rails.yml@main
+    uses: ./.github/workflows/reviewdog_rails.yml
     with:
       ruby_version: 3.1.0
       use_rubocop: true
