fix: don't stop workflow when simplecov report fail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,21 @@ on:
         required: false
         default: false
         type: boolean
+      use_simplecov_report:
+        description: "whether use simplecov or not"
+        required: false
+        default: false
+        type: boolean
+      simplecov_report_path:
+        description: "path to coverage report"
+        required: false
+        default: coverage
+        type: string
+      simplecov_command:
+        description: "execute simplecov command"
+        required: false
+        default: "bundle exec rake coverage:report"
+        type: string
     secrets:
       github_pat:
         description: "Personal Access Token of bot user"
@@ -55,12 +70,12 @@ on:
 
 jobs:
   dependency-resolution:
+    if: ${{ github.event_name == 'pull_request' }}
     name: resolve dependencies
     runs-on: ubuntu-latest
     outputs:
       all_changed_files: ${{ steps.changed-files.outputs.all_modified_files }}
-      pull_request_number: ${{ steps.pr.outputs.pull_request_number }}
-      allow_simplecov_action: ${{ github.ref_name == 'master' || steps.pr.outputs.pull_request_number != '' }}
+      base_ref_hash: #{{ steps.hash.outputs.base_ref_hash }}
     steps:
       - uses: actions/checkout@v2
       - name: get changed files
@@ -75,11 +90,9 @@ jobs:
           node_package_manager: ${{ inputs.node_package_manager }}
           use_go: ${{ inputs.use_go }}
           go_version: ${{ inputs.go_version }}
-      - name: store pull request number with output parameter
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
-        id: pr
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_pat }}
+      - name: store base_ref hash with output parameter
+        run: echo "::set-output name=bash_ref_hash::$(git merge-base ${{ github.base_ref }} ${{ github.head_ref }} || echo "")"
+        id: hash
 
   lint:
     name: execute `make lint`
@@ -127,7 +140,15 @@ jobs:
           NODE_VERSION: ${{ inputs.node_version }}
           GO_VERSION: ${{ inputs.go_version }}
           GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
           ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
 
   test-with-mysql:
     if: ${{ inputs.use_mysql == true && inputs.test_in_parallel == false }}
@@ -165,7 +186,15 @@ jobs:
           GO_VERSION: ${{ inputs.go_version }}
           MYSQL_VERSION: ${{ inputs.mysql_version }}
           GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
           ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
 
   test-in-parallel:
     if: ${{ inputs.use_mysql == false && inputs.test_in_parallel == true }}
@@ -203,16 +232,21 @@ jobs:
           JUNIT_REPORT_DIR_OLD: old-rspec-reports
           JUNIT_REPORT_DIR_NEW: rspec-reports
           GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
           ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
 
   test-in-parallel-with-mysql:
     if: ${{ inputs.use_mysql == true && inputs.test_in_parallel == true }}
     name: execute `make test`
     needs: dependency-resolution
     runs-on: ubuntu-${{ startsWith(inputs.mysql_version, '5') && '18.04' || 'latest' }}
-    outputs:
-      allow_simplecov_action: ${{ needs.dependency-resolution.outputs.allow_simplecov_action }}
-      pull_request_number: ${{ needs.dependency-resolution.outputs.pull_request_number }}
     services:
       db:
         image: mysql:${{ inputs.mysql_version }}
@@ -256,23 +290,25 @@ jobs:
           JUNIT_REPORT_DIR_OLD: old-rspec-reports
           JUNIT_REPORT_DIR_NEW: rspec-reports
           GITHUB_TOKEN: ${{ secrets.github_pat }}
-          COVERAGE: ${{ needs.dependency-resolution.outputs.allow_simplecov_action }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
           ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
-      - name: rename coverage report
-        if: ${{ needs.dependency-resolution.outputs.allow_simplecov_action == 'true' }}
-        run: mv coverage/.resultset.json coverage/.resultset-${{ matrix.node_index }}.json
-      - name: stash simplecov coverage results
-        if: ${{ needs.dependency-resolution.outputs.allow_simplecov_action == 'true' }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
         uses: actions/upload-artifact@v2
         with:
-          name: tmp-coverage-report
-          path: coverage
-          if-no-files-found: error
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
 
   simplecov-report-action:
-    name: merge and check coverage
-    needs: test-in-parallel-with-mysql
-    if: ${{ success() && needs.test-in-parallel-with-mysql.outputs.allow_simplecov_action == 'true' }}
+    if: ${{ success() && inputs.use_simplecov_report == true }}
+    name: report simplecov coverage
+    needs: [
+      test,
+      test-with-mysql,
+      test-in-parallel,
+      test-in-parallel-with-mysql,
+    ]
     runs-on: ubuntu-${{ startsWith(inputs.mysql_version, '5') && '18.04' || 'latest' }}
     steps:
       - uses: actions/checkout@v2
@@ -285,31 +321,23 @@ jobs:
           node_package_manager: ${{ inputs.node_package_manager }}
           use_go: ${{ inputs.use_go }}
           go_version: ${{ inputs.go_version }}
-      - uses: actions/download-artifact@v2
+      - name: download coverage report
+        uses: actions/download-artifact@v2
         with:
-          name: tmp-coverage-report
-          path: coverage
-      - run: bundle exec rake coverage:report
-      - uses: actions/upload-artifact@v2
-        with:
-          name: coverage
-          path: |
-            coverage/assets/
-            coverage/coverage.json
-            coverage/index.html
-          if-no-files-found: error
-      - name: delete tmp-coverage-report
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+        continue-on-error: true
+      - run: ${{ inputs.simplecov_command }}
+      - name: delete coverage report
         uses: geekyeggo/delete-artifact@v1
         with:
-          name: tmp-coverage-report
-          failOnError: true
-      - uses: pinnacles/simplecov-report-action@v1.5.0
-        if: ${{ needs.test-in-parallel-with-mysql.outputs.pull_request_number != '' }}
+          name: coverage-report-${{ github.run_id }}
+          failOnError: false
+      - uses: pinnacles/simplecov-report-action@main
         with:
           token: ${{ secrets.github_pat }}
-          event_name: push
-          pr_number: ${{ needs.test-in-parallel-with-mysql.outputs.pull_request_number }}
-          head_branch: master
+          head_branch: ${{ github.base_ref }}
+          base_ref_hash: ${{ needs.devendency-resolution.outputs.base_ref_hash }}
 
   build:
     name: execute `make build`
