--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -3,40 +3,33 @@ name: Common Coverage reusable workflow
 on:
   workflow_call:
     inputs:
-      use_ruby:
-        description: "whether use ruby or not"
-        required: false
-        default: false
-        type: boolean
       ruby_version:
         description: "ruby version"
         required: false
         type: string
-      use_node:
-        description: "whether use node or not"
+      use_mysql:
+        description: "whether use mysql or not"
         required: false
         default: false
         type: boolean
-      node_version:
-        description: "node version"
-        required: false
-        type: string
-      node_package_manager:
-        description: "node package manager name"
-        required: false
-        type: string
-      use_go:
-        description: "whether use go or not"
-        required: false
-        default: false
-        type: boolean
-      go_version:
-        description: "go version"
-        required: false
-        type: string
       mysql_version:
         description: "mysql version"
         required: false
+        type: string
+      test_in_parallel:
+        description: "whether test in parallel or not"
+        required: false
+        default: false
+        type: boolean
+      use_simplecov_report:
+        description: "whether use simplecov or not"
+        required: false
+        default: false
+        type: boolean
+      simplecov_report_path:
+        description: "path to coverage report"
+        required: false
+        default: coverage
         type: string
     secrets:
       github_pat:
@@ -45,35 +38,148 @@ on:
 
 jobs:
   dependency-resolution:
+    if: ${{ github.event_name == 'push' }}
     name: resolve dependencies
     runs-on: ubuntu-latest
     outputs:
-      pull_request_number: ${{ steps.pr.outputs.pull_request_number }}
-      allow_simplecov_action: ${{ github.ref_name == 'master' || steps.pr.outputs.pull_request_number != '' }}
+      all_changed_files: ${{ steps.changed-files.outputs.all_modified_files }}
+    steps:
+      - uses: actions/checkout@v2
+      - name: get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v1.1.2
+      - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
+        with:
+          use_ruby: 'true'
+          ruby_version: ${{ inputs.ruby_version }}
+
+  test:
+    if: ${{ inputs.use_mysql == false && inputs.test_in_parallel == false }}
+    name: execute `make test`
+    needs: dependency-resolution
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
         with:
-          use_ruby: ${{ inputs.use_ruby }}
+          use_ruby: 'true'
           ruby_version: ${{ inputs.ruby_version }}
-          use_node: ${{ inputs.use_node }}
-          node_version: ${{ inputs.node_version }}
-          node_package_manager: ${{ inputs.node_package_manager }}
-          use_go: ${{ inputs.use_go }}
-          go_version: ${{ inputs.go_version }}
-      - name: store pull request number with output parameter
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
-        id: pr
+      - run: make test
         env:
+          ACTION_TYPE: CI
+          RUBY_VERSION: ${{ inputs.ruby_version }}
           GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
+          ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
+      - name: upload rspec report
+        uses: actions/upload-artifact@v2
+        with:
+          name: rspec-reports
+          path: rspec-reports
+          if-no-files-found: warn
 
-  test:
+  test-with-mysql:
+    if: ${{ inputs.use_mysql == true && inputs.test_in_parallel == false }}
     name: execute `make test`
     needs: dependency-resolution
     runs-on: ubuntu-${{ startsWith(inputs.mysql_version, '5') && '18.04' || 'latest' }}
-    outputs:
-      allow_simplecov_action: ${{ needs.dependency-resolution.outputs.allow_simplecov_action }}
-      pull_request_number: ${{ needs.dependency-resolution.outputs.pull_request_number }}
+    services:
+      db:
+        image: mysql:${{ inputs.mysql_version }}
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+        options: >-
+          --health-cmd "mysqladmin ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v2
+      - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
+        with:
+          use_ruby: 'true'
+          ruby_version: ${{ inputs.ruby_version }}
+      - run: make test
+        env:
+          ACTION_TYPE: CI
+          RUBY_VERSION: ${{ inputs.ruby_version }}
+          MYSQL_VERSION: ${{ inputs.mysql_version }}
+          GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
+          ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
+      - name: upload rspec report
+        uses: actions/upload-artifact@v2
+        with:
+          name: rspec-reports
+          path: rspec-reports
+          if-no-files-found: warn
+
+  test-in-parallel:
+    if: ${{ inputs.use_mysql == false && inputs.test_in_parallel == true }}
+    name: execute `make test`
+    needs: dependency-resolution
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node_count: [12]
+        node_index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
+        with:
+          use_ruby: 'true'
+          ruby_version: ${{ inputs.ruby_version }}
+      - uses: pinnacles/common-cicd-actions/.github/actions/download-rspec-reports@v0.5.3
+      - run: |
+          curl -L --out split-test https://github.com/mtsmfm/split-test/releases/download/v1.0.0/split-test-x86_64-unknown-linux-gnu
+          chmod +x split-test
+      - run: make test
+        env:
+          ACTION_TYPE: CI
+          RUBY_VERSION: ${{ inputs.ruby_version }}
+          NODE_COUNT: ${{ matrix.node_count }}
+          NODE_INDEX: ${{ matrix.node_index }}
+          JUNIT_REPORT_DIR_OLD: old-rspec-reports
+          JUNIT_REPORT_DIR_NEW: rspec-reports
+          GITHUB_TOKEN: ${{ secrets.github_pat }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
+          ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
+      - name: upload rspec report
+        uses: actions/upload-artifact@v2
+        with:
+          name: rspec-reports
+          path: rspec-reports
+          if-no-files-found: warn
+
+  test-in-parallel-with-mysql:
+    if: ${{ inputs.use_mysql == true && inputs.test_in_parallel == true }}
+    name: execute `make test`
+    needs: dependency-resolution
+    runs-on: ubuntu-${{ startsWith(inputs.mysql_version, '5') && '18.04' || 'latest' }}
     services:
       db:
         image: mysql:${{ inputs.mysql_version }}
@@ -89,19 +195,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node_count: [12]
-        node_index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
+        node_count: [8]
+        node_index: [0, 1, 2, 3, 4, 5, 6, 7]
     steps:
       - uses: actions/checkout@v2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
         with:
-          use_ruby: ${{ inputs.use_ruby }}
+          use_ruby: 'true'
           ruby_version: ${{ inputs.ruby_version }}
-          use_node: ${{ inputs.use_node }}
-          node_version: ${{ inputs.node_version }}
-          node_package_manager: ${{ inputs.node_package_manager }}
-          use_go: ${{ inputs.use_go }}
-          go_version: ${{ inputs.go_version }}
       - uses: pinnacles/common-cicd-actions/.github/actions/download-rspec-reports@v0.5.3
       - run: |
           curl -L --out split-test https://github.com/mtsmfm/split-test/releases/download/v1.0.0/split-test-x86_64-unknown-linux-gnu
@@ -110,62 +211,67 @@ jobs:
         env:
           ACTION_TYPE: CI
           RUBY_VERSION: ${{ inputs.ruby_version }}
-          NODE_VERSION: ${{ inputs.node_version }}
-          GO_VERSION: ${{ inputs.go_version }}
           NODE_COUNT: ${{ matrix.node_count }}
           NODE_INDEX: ${{ matrix.node_index }}
           JUNIT_REPORT_DIR_OLD: old-rspec-reports
           JUNIT_REPORT_DIR_NEW: rspec-reports
           GITHUB_TOKEN: ${{ secrets.github_pat }}
-          COVERAGE: ${{ needs.dependency-resolution.outputs.allow_simplecov_action }}
-      - name: rename coverage report
-        if: ${{ needs.dependency-resolution.outputs.allow_simplecov_action == 'true' }}
-        run: mv coverage/.resultset.json coverage/.resultset-${{ matrix.node_index }}.json
-      - name: stash simplecov coverage results
-        if: ${{ needs.dependency-resolution.outputs.allow_simplecov_action == 'true' }}
+          COVERAGE: ${{ inputs.use_simplecov_report }}
+          ALL_CHANGED_FILES: ${{ needs.dependency-resolution.outputs.all_changed_files }}
+      - name: upload coverage report
+        if: ${{ inputs.use_simplecov_report == true }}
         uses: actions/upload-artifact@v2
         with:
-          name: tmp-coverage-report
-          path: coverage
-          if-no-files-found: error
-      - name: upload the results of the spec report
+          name: coverage-report-${{ github.run_id }}
+          path: ${{ inputs.simplecov_report_path }}
+          if-no-files-found: warn
+      - name: upload rspec report
         uses: actions/upload-artifact@v2
         with:
           name: rspec-reports
           path: rspec-reports
-          if-no-files-found: error
+          if-no-files-found: warn
 
   store-simplecov-report:
+    if: ${{ success() && inputs.use_simplecov_report == true }}
     name: merge and store coverage
-    needs: [test]
-    if: ${{ success() && needs.test.outputs.allow_simplecov_action == 'true' }}
+    needs: [
+      test,
+      test-with-mysql,
+      test-in-parallel,
+      test-in-parallel-with-mysql,
+    ]
     runs-on: ubuntu-${{ startsWith(inputs.mysql_version, '5') && '18.04' || 'latest' }}
     steps:
       - uses: actions/checkout@v2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
         with:
-          use_ruby: ${{ inputs.use_ruby }}
+          use_ruby: 'true'
           ruby_version: ${{ inputs.ruby_version }}
-          use_node: ${{ inputs.use_node }}
-          node_version: ${{ inputs.node_version }}
-          node_package_manager: ${{ inputs.node_package_manager }}
-          use_go: ${{ inputs.use_go }}
-          go_version: ${{ inputs.go_version }}
       - uses: actions/download-artifact@v2
         with:
-          name: tmp-coverage-report
+          name: coverage-report-${{ github.run_id }}
           path: coverage
+        continue-on-error: true
       - run: bundle exec rake coverage:report
       - uses: actions/upload-artifact@v2
         with:
-          name: coverage
+          name: coverage-head
           path: |
             coverage/assets/
             coverage/coverage.json
             coverage/index.html
-          if-no-files-found: error
-      - name: delete tmp-coverage-report
+          if-no-files-found: warn
+      - uses: actions/upload-artifact@v2
+        with:
+          name: coverage-${{ github.sha }}
+          path: |
+            coverage/assets/
+            coverage/coverage.json
+            coverage/index.html
+          if-no-files-found: warn
+      - name: delete coverage report
         uses: geekyeggo/delete-artifact@v1
         with:
-          name: tmp-coverage-report
-          failOnError: true
+          name: coverage-report-${{ github.run_id }}
+          failOnError: false
