--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -38,7 +38,6 @@ on:
 
 jobs:
   dependency-resolution:
-    if: ${{ github.event_name == 'push' }}
     name: resolve dependencies
     runs-on: ubuntu-latest
     outputs:
@@ -233,8 +232,8 @@ jobs:
           if-no-files-found: warn
 
   store-simplecov-report:
-    if: ${{ success() && inputs.use_simplecov_report == true }}
-    name: merge and store coverage
+    if: ${{ inputs.use_simplecov_report == true && (always() && contains(needs.*.result, 'success') && !(contains(needs.*.result, 'failure'))) }}
+    name: store simplecov report
     needs: [
       test,
       test-with-mysql,
