--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -27,5 +27,7 @@ jobs:
       ruby_version: 3.1.0
       test_in_parallel: true
       use_simplecov_report: true
+      simplecov_report_path: test/coverage.json
+      simplecov_command: "make simplecov"
     secrets:
       github_pat: dummy
