--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -355,7 +355,7 @@ jobs:
           headRefCoveragePath: ${{ inputs.simplecov_report_path }}/coverage.json
           baseRefCoveragePath: baseref_coverage/coverage.json
           token: ${{ secrets.github_pat }}
-          base_branch: ${{ github.base_ref }}
+          baseBranch: ${{ github.base_ref }}
         continue-on-error: true
 
   build:
