--- a/.github/workflows/test_report.yml
+++ b/.github/workflows/test_report.yml
@@ -28,5 +28,6 @@ jobs:
       test_in_parallel: true
       use_simplecov_report: true
       simplecov_report_path: test/coverage.json
+      simplecov_command: "make simplecov"
     secrets:
       github_pat: dummy
