--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -52,6 +52,8 @@ jobs:
       - name: get changed files
         id: changed-files
         uses: tj-actions/changed-files@v1.1.2
+        with:
+          fetch-depth: 2
       - uses: pinnacles/common-cicd-actions/.github/actions/setup-lang@v0.1.0
         with:
           use_ruby: 'true'
