fix: fix getting base_ref_hash command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           use_go: ${{ inputs.use_go }}
           go_version: ${{ inputs.go_version }}
       - name: store base_ref hash with output parameter
-        run: echo "::set-output name=bash_ref_hash::$(git merge-base ${{ github.base_ref }} ${{ github.head_ref }} || echo "")"
+        run: echo "::set-output name=bash_ref_hash::$(git show-branch --merge-base --sha1-name ${{ github.base_ref }} ${{ github.head_ref }} || echo "")"
         id: hash
 
   lint:
