fix: wait for simplecov-repor-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -394,6 +394,7 @@ jobs:
         test-in-parallel,
         test-in-parallel-with-mysql,
         build,
+        simplecov-report-action,
       ]
     if: ${{ ! failure() }}
     runs-on: ubuntu-latest
